# edu-cli

./: AGENTS.md  README.md  main.py  pyproject.toml
cli_edu/: __init__.py  cli.py  generator.py  i18n.py  math.py  models.py  reading.py  session.py
content/en/: reading.json
content/it/: reading.json
