[project]
name = "cli-edu"
version = "0.1.0"
description = "A small CLI for generating age-appropriate maths practice problems."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
]

[project.scripts]
cli-edu = "cli_edu.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
